# upstage-cv-classification-cv2-pub

./: .gitignore  README.md  agumentation.ipynb  agumentation2.ipynb  agumentation7.ipynb  augraphy.ipynb  base_agumentation.ipynb  base_model.ipynb  base_model_JY_semisupervised.ipynb  base_model_JY_semisupervised_with_CAM.ipynb  base_model_batch_val.ipynb  base_model_optuna.ipynb  baseline.ipynb  baseline_code.ipynb  baseline_code_2.ipynb  batch_realesrgan.py  best_model_heo_tta.ipynb  contra.ipynb  contra_data.ipynb  create_validset.ipynb  donut2.ipynb  east.ipynb  edge_agu.ipynb  efficientnet_b0_JY_BUT_ONLY_CAM_REFER.ipynb  efficientnet_b0_withCAM.ipynb  gaussian_agumentation.ipynb  kkh-1-data-meta.py  kkh-2-data-trainimage(1).py  kkh-2-data-trainimage(1. train_kr).py  kkh-2-data-trainimage(2).py  kkh-2-data-trainimage(2. train_kr_class).py  kkh-3-data-preprocessing.py  kkh-4-eda.ipynb  kkh-5-augmentation(1).ipynb  kkh-5-augmentation(1. train_kr_aug).ipynb  kkh-5-augmentation(1. train_kr_aug)_1.ipynb  kkh-5-augmentation(1. train_kr_aug)_5.ipynb  kkh-5-augmentation(1. train_kr_aug)_6.ipynb  kkh-5-augmentation(1. train_kr_aug)_8.ipynb  kkh-5-augmentation(1. train_kr_aug)_9.ipynb  (+45 more)
data/: augmentation.py  data.py
submission/: efficientnet_b4_0.0004_1.0000.pt.csv  result.csv  result_epc10.csv  result_epc40.csv  result_epc50.csv
submission/0.8978/: aug.csv  kkh-6-model.ipynb
submission/0.8979/: kkh-1-data-meta.py  kkh-6-model_2.ipynb
temp/: test_predictions.csv
